--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 .square {
     height: 200px;
     width: 200px;
-    border: solid black 1px;
+    border: solid rgb(153, 49, 49) 1px;
 }
 
 .mole {
